# burn-vae

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  flake.nix  pyproject.toml  shell.nix  treefmt.nix
.cargo/: config.toml
burn_vae/: Cargo.toml
burn_vae/src/: data.rs  lib.rs  metric.rs  model.rs  train.rs
dataset/: Cargo.toml
dataset/src/: data.rs  generate.rs  lib.rs  point.rs  workers.rs
inference/: Cargo.toml
inference/src/: lib.rs
notebooks/: rust.ipynb
python/burn_vae/: __init__.py
src/: data.rs  lib.rs  main.rs  metric.rs  mlp.rs  model.rs  train.rs  visualization.rs
train/: Cargo.toml
train/src/: config.rs  lib.rs  load.rs  main.rs  metric.rs  train.rs  visualization.rs
train_vae/: Cargo.toml
train_vae/src/: main.rs
vae/: Cargo.toml
vae/src/: lib.rs  loss.rs  metric.rs  mlp.rs  model.rs
web/: Cargo.toml
web/public/: plot.js
web/src/: app.rs  bindings.rs  lib.rs  main.rs
web/style/: main.css
