[workspace]
resolver = "2"
members = [
  "burn_vae",
  "train_vae",
]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
# lto = "thin"
# codegen-units = 1

[workspace.dependencies]
burn_vae = { path = "burn_vae" }

[workspace.dependencies.burn]
version = "0.11.1"
default-features = false
features = ["train", "tui", "wgpu"]
