[workspace]
resolver = "2"
members = [
  "dataset",
  "vae",
  "train",
  "inference",
]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
# lto = "thin"
# codegen-units = 1

[workspace.dependencies]
train = { path = "train" }
vae = { path = "vae" }
dataset = { path = "dataset" }
serde = "1"

[workspace.dependencies.pyo3]
version = "0.19.0"
default-features = false
features = ["auto-initialize", "macros"]

[workspace.dependencies.once_cell]
version = "1.19.0"
default-features = false
features = ["std"]

[workspace.dependencies.burn]
version = "0.11.1"
default-features = false
features = ["fusion", "train", "tui", "wgpu"]
