[workspace]
resolver = "2"
default-members = ["train"]
members = [
  "dataset",
  "vae",
  "train",
  "inference",
  "web",
]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
# lto = "fat"
# codegen-units = 1

[profile.wasm-release]
inherits = "release"
# opt-level = 'z'
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
train = { path = "train" }
vae = { path = "vae" }
dataset = { path = "dataset" }
inference = { path = "inference" }
burn = { version = "0.11.1", default-features = false }
plotly = { version = "0.8.4" }
rand = { version = "0.8.5" }
serde = "1"

[workspace.dependencies.pyo3]
version = "0.19.0"
default-features = false
features = ["auto-initialize", "macros"]

[workspace.dependencies.once_cell]
version = "1.19.0"
default-features = false
features = ["std"]
