[package]
name = "dataset"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { workspace = true }
flume = { version = "0.11.0", default-features = false}
once_cell = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
burn = { workspace = true, features = ["fusion", "wgpu"]}
pyo3 = { workspace = true }
